# dspy-playground

./: .env  .env.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CLI_USAGE.md  DUAL_OLLAMA_SETUP.md  Dockerfile  PLAN.md  README.md  SPRINT3_COMPLETED.md  SPRINT4_COMPLETED.md  SPRINT4_PROGRESS.md  SPRINT4_SUMMARY.md  capture_malformed_json.py  check_database_for_splits.py  docker-compose.local.yml  docker-compose.reranker.yml  docker-compose.yml  main.py  pyproject.toml  railway.toml  setup.bat  test_claim_fix.py  test_dspy_hello.py  test_enhanced_parser.py  test_json_mode_comprehensive.py  test_json_repair_bug.py  test_ollama_json_mode.py  test_real_solutions.py  test_sprint3.py  test_sprint4.py  verify_csv.py  verify_model_loading.py
data/: analyze_claim_formats.py  claims_from_chunks_reviewed.csv  editor_reviewed_results.csv  good_claims.csv  process_claims_from_chunks_reviewed.py  sample_transcript.txt
docs/: AD_FILTERING_INTEGRATION.md  CLAIM_SPLIT_BUG_FIX.md  CLAIM_SPLIT_ISSUE_DOC.md  METRICS_GUIDE.md  RUN_LLM_JUDGE_EXPERIMENTS.md  SUMMARY.md
evaluation/: AD_DATASET_README.md  ad_manual_review.json  ad_train.json  ad_val.json  claims_manual_review.json  claims_positive_only.json  claims_train.json  claims_val.json  entailment_manual_review.json  entailment_train.json  entailment_val.json  quote_finding_train.json
models/: ad_classifier_v1.json  claim_extractor_bootstrap_v1.json  claim_extractor_llm_judge_v1.json  claim_extractor_mipro_v1.json  claim_extractor_mipro_v1_results.json  claim_extractor_positive_v1.json  entailment_validator_v1.json  (+1 more)
(+218 files in other folders)
